--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                 <div class="date">Ongoing</div>
                 <p>Completed 12+ specialized cybersecurity rooms, including Authentication Bypass, IDOR, and Subdomain Enumeration. Maintaining a 38-day learning streak with fundamental offensive security and penetration testing modules.</p>
                 <div class="links">
-                    <a href="#" target="_blank">Profile</a>
+                    <a href="https://tryhackme.com/r/p/AdityaNagariya" target="_blank">Profile</a>
                 </div>
             </div>
 
@@ -661,7 +661,7 @@
                 <div class="date">Ongoing</div>
                 <p>Completed 15+ modules with a 100% average score.</p>
                 <div class="links">
-                    <a href="#" target="_blank">Profile</a>
+                    <a href="https://app.hackthebox.com/profile/1471799" target="_blank">Profile</a>
                 </div>
             </div>
 
@@ -670,7 +670,7 @@
                 <div class="date">January 2025</div>
                 <p>Successfully passed with Merit</p>
                 <div class="links">
-                    <a href="#" target="_blank">Certificate</a>
+                    <a href="https://candidate.speedexam.net/certificate.aspx?SSTATE=am4131EniU8ntjp4bO5mXRTcxhSYYbHvMp/7NNjZI0Fig3VVmXBPo7tnybqRym5rLAh5m8/L7mfRubFOmS+1dj9ISarRzbIhMckYLtLwBEs=" target="_blank">Certificate</a>
                 </div>
             </div>
 
@@ -679,7 +679,7 @@
                 <div class="date">December 2024</div>
                 <p>Ranked 1448 out of 143,086 participants. Completed the course with 100% score.</p>
                 <div class="links">
-                    <a href="#" target="_blank">Certificate</a>
+                    <a href="https://tryhackme.com/r/AdityaNagariya/badges/adventofcyber2024" target="_blank">Certificate</a>
                 </div>
             </div>
 
@@ -688,8 +688,8 @@
                 <div class="date">October 2023</div>
                 <p>Achieved top 10% ranking among 5000+ participants</p>
                 <div class="links">
-                    <a href="#" target="_blank">Certificate</a>
-                    <a href="#" target="_blank">Badge</a>
+                    <a href="https://drive.google.com/file/d/1MgPJSCsYuZqeUpWK1W3iUDZyGaGSJFRC/view?usp=sharing" target="_blank">Certificate</a>
+                    <a href="https://www.credly.com/go/xhCLJCAm" target="_blank">Badge</a>
                 </div>
             </div>
 
@@ -698,7 +698,7 @@
                 <div class="date">June 2022</div>
                 <p>Scored in the 90th percentile</p>
                 <div class="links">
-                    <a href="#" target="_blank">Certificate</a>
+                    <a href="http://www.testdome.com/certificates/7eecbd9af3134abdbba959a63d413045" target="_blank">Certificate</a>
                 </div>
             </div>
         </div>
