--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                         <li>Constructed responsive UI supporting 5+ screen sizes with 100% layout consistency</li>
                     </ul>
                     <div class="links">
-                        <a href="https://github.com/Aditya-Nagariya/Clima-Weather-App" target="_blank">GitHub Repository</a>
+                        <a href="https://github.com/Aditya-Nagariya/Flutter_Self.git" target="_blank">GitHub Repository</a>
                     </div>
                 </div>
             </div>
