--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         }
 
         .links a:hover {
-            color: var(--white);
+            color: var(--Primary);
         }
 
         .links a::after {
