--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                     </div>
                 </div>
 
-                <div class="card scale-in">
+                <div class="card fade-in">
                     <h3>Clima — Cross-Platform Weather Application</h3>
                     <p>December 2022</p>
                     <ul>
