--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@
                     <ul>
                         <li>Participated in advanced penetration testing labs, covering SQL injection, brute force attacks, and network enumeration.</li>
                         <li>Utilized tools such as nmap, ping, traceroute, and hping to perform network scanning and vulnerability assessments.</li>
+                        <li><iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2619385" style='border:none;'></iframe></li>
                     </ul>
                 </div>
             </div>
