--- a/index.html
+++ b/index.html
@@ -605,7 +605,6 @@
                     <ul>
                         <li>Participated in advanced penetration testing labs, covering SQL injection, brute force attacks, and network enumeration.</li>
                         <li>Utilized tools such as nmap, ping, traceroute, and hping to perform network scanning and vulnerability assessments.</li>
-                        <li><iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2619385" style='border:none;'></iframe></li>
                     </ul>
                 </div>
             </div>
@@ -747,7 +746,7 @@
                 <div class="date">Ongoing</div>
                 <p>Completed 12+ specialized cybersecurity rooms, including Authentication Bypass, IDOR, and Subdomain Enumeration. Maintaining a 38-day learning streak with fundamental offensive security and penetration testing modules.</p>
                 <div class="links">
-                    <a href="https://tryhackme.com/r/p/AdityaNagariya" target="_blank">Profile</a>
+                    <a <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2619385" style='border:none;'></iframe>>Profile</a>
                 </div>
             </div>
 
