--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                 <div class="date">Ongoing</div>
                 <p>Completed 12+ specialized cybersecurity rooms, including Authentication Bypass, IDOR, and Subdomain Enumeration. Maintaining a 38-day learning streak with fundamental offensive security and penetration testing modules.</p>
                 <div class="links">
-                    <a <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2619385" style='border:none;'></iframe>>Profile</a>
+                   <a href="https://tryhackme.com/r/p/AdityaNagariya" target="_blank">Profile</a>
                 </div>
             </div>
 
