--- a/index.html
+++ b/index.html
@@ -651,11 +651,12 @@
             <div class="skills-category">
                 <h3>Cybersecurity Platforms</h3>
                 
-                <div class="certificate-card fade-in">
-                    <h4>TryHackMe</h4>
-                    <div class="date">Ongoing</div>
-                    <p>Completed 12+ specialized cybersecurity rooms, including Authentication Bypass, IDOR, and Subdomain Enumeration. Maintaining a 38-day learning streak with fundamental offensive security and penetration testing modules.</p>
+                <div class="card scale-in">
+                    <h3>TryHackMe</h3>
+                    <p>Ongoing</p>
                     <ul>
+                        <li>Completed 12+ specialized cybersecurity rooms, including Authentication Bypass, IDOR, and Subdomain Enumeration</li>
+                        <li>Maintaining a 38-day learning streak with fundamental offensive security and penetration testing modules</li>
                         <li>Top 10% on the global leaderboard for June 2024</li>
                         <li>Completed Web Application Security track with 100% score</li>
                         <li>Earned 8 badges including Complete Beginner, Offensive Pentesting, and Web Fundamentals</li>
@@ -668,11 +669,12 @@
                     </div>
                 </div>
 
-                <div class="certificate-card fade-in">
-                    <h4>Hack The Box Academy</h4>
-                    <div class="date">Ongoing</div>
-                    <p>Completed 15+ modules with a 100% average score. Currently focusing on network penetration testing and privilege escalation techniques.</p>
+                <div class="card scale-in">
+                    <h3>Hack The Box Academy</h3>
+                    <p>Ongoing</p>
                     <ul>
+                        <li>Completed 15+ modules with a 100% average score</li>
+                        <li>Currently focusing on network penetration testing and privilege escalation techniques</li>
                         <li>Completed "Introduction to Network Traffic Analysis" with perfect score</li>
                         <li>Solved 8+ boxes in the Easy to Medium difficulty range</li>
                         <li>Ranked in top 20% of active users in July 2024</li>
