--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                         <li>Maintaining a 38-day learning streak with fundamental offensive security and penetration testing modules</li>
                         <li>Top 10% on the global leaderboard for June 2024</li>
                         <li>Completed Web Application Security track with 100% score</li>
-                        <li>Earned 8 badges including Complete Beginner, Offensive Pentesting, and Web Fundamentals</li>
+                        <li>Notable accomplishments include the successful completion of the ‘Introduction to Pentesting’ module, a remarkable seven-day hacking streak, and a commendable 30-day hacking streak. Furthermore, I have consistently demonstrated my commitment to cybersecurity through my active participation in Advent of Cyber 2024.</li>
                     </ul>
                     <div class="tryhackme-progress">
                         <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2619385" style='border:none; width:100%; height:180px;'></iframe>
