--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                     </div>
                 </div>
                 
-                <div class="certificate-card fade-in">
+<!--                 <div class="certificate-card fade-in">
                     <h4>National Cyber Olympiad</h4>
                     <div class="date">September 2023</div>
                     <p>Secured position in the top 5% nationally, demonstrating exceptional problem-solving skills and cybersecurity knowledge.</p>
@@ -807,7 +807,7 @@
                     <h4>Cyber Defense Challenge</h4>
                     <div class="date">February 2025</div>
                     <p>Participated in a 48-hour capture-the-flag competition focused on defense tactics against common web application vulnerabilities.</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
