--- a/index.html
+++ b/index.html
@@ -772,11 +772,11 @@
                     </div>
                 </div>
                 
-                <div class="certificate-card fade-in">
+<!--                 <div class="certificate-card fade-in">
                     <h4>CEH Preparation Course (In Progress)</h4>
                     <div class="date">Expected December 2025</div>
                     <p>Currently preparing for the Certified Ethical Hacker certification through comprehensive course materials and practical labs.</p>
-                </div>
+                </div> -->
             </div>
 
             <div class="skills-category">
