--- a/index.html
+++ b/index.html
@@ -757,11 +757,11 @@
                     </div>
                 </div>
 
-                <div class="certificate-card fade-in">
+<!--                 <div class="certificate-card fade-in">
                     <h4>CompTIA Security+ (In Progress)</h4>
                     <div class="date">Expected June 2025</div>
                     <p>Currently preparing for this globally recognized certification that validates the baseline skills necessary to perform core security functions.</p>
-                </div>
+                </div> -->
 
                 <div class="certificate-card fade-in">
                     <h4>Test-Dome SQL Certification</h4>
