--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                             <a href="https://github.com/Aditya-Nagariya/SteganoSafe" target="_blank">
                                 <i class="fab fa-github"></i> GitHub Repository
                             </a>
-                            <a href="#" target="_blank">
+                            <a href="http://steganosafe.onrender.com" target="_blank">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                         </div>
