--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                         <div class="date">December 2023</div>
                         <p>Completed with 100% score, demonstrating expertise in AI prompt engineering and optimization techniques for security and development applications.</p>
                         <div class="links">
-                            <a href="#" target="_blank">
+                            <a href="https://coursera.org/verify/S6ALJE2X7CGN" target="_blank">
                                 <i class="fas fa-certificate"></i> View Certificate
                             </a>
                         </div>
